Fix Bug: Hero unresponsive on mobile

--- a/src/app.scss
+++ b/src/app.scss
@@ -43,7 +43,7 @@ body {
   #about,
   #skills,
   #projects {
-    padding-inline: 75px;
+    padding-inline: 5vw;
     height: fit-content;
     min-height: 100vh;
     margin-block: 20vh;
