--- a/src/components/styles/nav.scss
+++ b/src/components/styles/nav.scss
@@ -6,7 +6,7 @@ nav {
   justify-content: space-between;
   align-items: center;
 
-  padding-inline: 75px;
+  padding-inline: 5vw;
   padding-block: 2rem;
 
   margin-left: auto;
