--- a/src/pages/styles/contact.scss
+++ b/src/pages/styles/contact.scss
@@ -1,7 +1,7 @@
 #contact {
   width: 100%;
 
-  padding-inline: 75px;
+  padding-inline: 5vw;
   height: fit-content;
   margin-top: 20vh;
 
